--- a/index.html
+++ b/index.html
@@ -149,10 +149,10 @@
         </div>
 
         <div>
-            <a class="social" href="">
+            <a class="social" href="https://github.com/AlexsandroGomesClemente">
                 <img src="./Assets/Img/github.png" alt="git-logo">
             </a>
-            <a class="social" href="">
+            <a class="social" href="https://www.linkedin.com/in/alexsandro-gomes-clemente-7842a21ba/">
                 <img src="./Assets/Img/linkedin.png" alt="linkedin-logo">
             </a>
         </div>
