Fotos dos Projetos

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <div class="card">
                     <h3>Conversor de Moeda</h3>
                     <a href="https://alexsandrogomesclemente.github.io/ConvertCoin/" target="_blank">
-                        <img src="./Assets/Img/projeto.png" alt="projeto">
+                        <img src="./Assets/Img/conversordemoeda.png" alt="projeto">
                     </a>
                     <p>Conversor de moeda , feito para desenvolver minhas habilidades com HTML/CSS & JS,fazendo conversão nos valores de Dolar,Euro e BitCoin.</p>
                 </div>
@@ -77,7 +77,7 @@
                 <div class="card">
                     <h3>To-Do List</h3>
                     <a href="https://alexsandrogomesclemente.github.io/To-Do-List/" target="_blank">
-                        <img src="./Assets/Img/projeto.png" alt="projeto">
+                        <img src="./Assets/Img/to-do-list.jpeg" alt="projeto">
                     </a>
                     <p>To-Do List , desenvolvido para uma prova , aqui consegui aprender mais sobre JS</p>
                 </div>
@@ -85,7 +85,7 @@
                 <div class="card">
                     <h3>Calculadora</h3>
                     <a href="https://alexsandrogomesclemente.github.io/Calculadora/" target="_blank">
-                        <img src="./Assets/Img/projeto.png" alt="projeto">
+                        <img src="./Assets/Img/Calculadora 123.png" alt="projeto">
                     </a>
                     <p>Calculadora desenvolvida para treinar JS e outras habilidades</p>
                 </div>
@@ -93,7 +93,7 @@
                 <div class="card">
                     <h3>Landing Page</h3>
                     <a href="https://alexsandrogomesclemente.github.io/Primeira-Landing-Page/" target="_blank">
-                        <img src="./Assets/Img/projeto.png" alt="projeto">
+                        <img src="./Assets/Img/landing page.png" alt="projeto">
                     </a>
                     <p>Landing Page feita para aperfeiçoar meus conhecimentos.</p>
                 </div>
@@ -101,14 +101,14 @@
                 <div class="card">
                     <h3>Login Yoga -Mobile First</h3>
                     <a href="https://alexsandrogomesclemente.github.io/ProjetoYoga/" target="_blank">
-                        <img src="./Assets/Img/projeto.png" alt="projeto">
+                        <img src="./Assets/Img/Project Yoga.png" alt="projeto">
                     </a>
                     <p>Projeto desenvolvido para treinar os conhecimentos de mobile-first</p>
                 </div>
                 <div class="card">
                     <h3>Pagina de Login</h3>
                     <a href="https://alexsandrogomesclemente.github.io/Treino-HTML-CSS-JS/" target="_blank">
-                        <img src="./Assets/Img/projeto.png" alt="projeto">
+                        <img src="./Assets/Img/Login Page.png" alt="projeto">
                     </a>
                     <p>Um dos primeiros projetos feitos , para treinar HTML&CSS</p>
                 </div>
