--- a/index.html
+++ b/index.html
@@ -132,10 +132,10 @@
                         <p>(19) 9-9286-0543 ou (19)9-8139-2167</p>
                     </div>
 
-                    <a class="social" href="https://github.com/AlexsandroGomesClemente">
+                    <a class="social img-none" href="https://github.com/AlexsandroGomesClemente">
                         <img src="./Assets/Img/github.png" alt="git-logo">
                     </a>
-                    <a class="social" href="https://www.linkedin.com/in/alexsandro-gomes-clemente-7842a21ba/">
+                    <a class="social img-none" href="https://www.linkedin.com/in/alexsandro-gomes-clemente-7842a21ba/">
                         <img src="./Assets/Img/linkedin.png" alt="linkedin-logo">
                     </a>
 
